--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="logo/Logo-Default-Square.png" />
+    <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.5/dist/flowbite.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Cpt. Java Trip </title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="../path/to/flowbite/dist/flowbite.js"></script>
   </body>
 </html>
