--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="logo/Logo-Default-Square.png" />
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.5/dist/flowbite.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Cpt. Java Trip </title>
+    <title> Captain Java Trip </title>
   </head>
   <body>
     <div id="root"></div>
